# MathTools

./: .gitattributes  .gitignore  README.md  build-linux.sh  build.ps1  package-lock.json
backend/: main.py  pyproject.toml
backend/core/: consts.py  database.py  depends.py  http.py  safe_math.py
backend/modules/: base_converter.py  calc.py  derivative_calculator.py  docx_to_pdf_converter.py  image_converter.py  integral_calculator.py  matrix_calculator.py  number_theory.py  ode.py  pdf_converter.py  plotter.py  root.py  slae.py
backend/schemas/: base_converter.py  calc.py  derivative_calculator.py  integral_calculator.py  matrix_calculator.py  number_theory.py  ode.py  plotter.py  root.py  slae.py
backend/services/: base_converter.py  calc.py  derivative_calculator.py  docx_to_pdf_converter.py  image_converter.py  integral_calculator.py  matrix_calculator.py  number_theory.py  ode.py  pdf_converter.py  plotter.py  slae.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: Router.tsx  index.tsx  katex-fix.css
frontend/src/api/: axios.ts  saveFile.notify.tsx  saveFile.ts
frontend/src/components/: BackButton.tsx  BackendGate.tsx  ColorSchemeToggle.tsx  ModuleCard.tsx
frontend/src/pages/: BaseConverter.Page.tsx  DerivativeCalculator.Page.tsx  DocxConverter.Page.tsx  EngineerCalculator.Page.tsx  ImageConverter.Page.tsx  IntegralCalculator.Page.tsx  MatrixCalculator.Page.tsx  Module.Page.tsx  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1 files in other folders)
