[project]
name = "mathtoolsbackend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.128.5,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "img2pdf (>=0.6.3,<0.7.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "docx2pdf (>=0.1.8,<0.2.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "pyinstaller (>=6.20.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
